--- a/news.html
+++ b/news.html
@@ -51,7 +51,7 @@
 
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-selected active" id="home-nav" href="/" data-tag="">Beranda</a></li>
+                <li><a class="nav-selected active" id="home-nav" href="index.html" data-tag="">Beranda</a></li>
                 <li><a class="nav-selected" id="about-us-nav" href="#about-us" data-tag="#about-us">Tentang Kami</a></li>
                 <li><a class="nav-selected" id="news-nav" href="news.html" data-tag="">Berita</a></li>
                 <li><a class="nav-selected" id="elearning-nav" href="#elearning" data-tag="#elearning">E-Learning</a></li>
@@ -73,7 +73,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h2>Berita</h2>
                 <ol>
-                    <li><a href="/">Beranda</a></li>
+                    <li><a href="index.html">Beranda</a></li>
                     <li>Berita</li>
                 </ol>
             </div>
