--- a/contact-us.html
+++ b/contact-us.html
@@ -55,7 +55,7 @@
                 <li><a class="nav-selected" id="about-us-nav" href="index.html#about-us" data-tag="#about-us">Tentang Kami</a></li>
                 <li><a class="nav-selected" id="news-nav" href="news.html" data-tag="">Berita</a></li>
                 <li><a class="nav-selected" id="elearning-nav" href="index.html#elearning" data-tag="#elearning">E-Learning</a></li>
-                <li><a class="nav-selected" id="services-nav" href="index.html#services" data-tag="#services">Produk & Layanan</a></li>
+                <li><a class="nav-selected" id="services-nav" href="index.htmlu#services" data-tag="#services">Produk & Layanan</a></li>
                 <li><a class="nav-selected" id="contactus-nav" href="contact-us.html" data-tag="">Hubungi Kami</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
